# MotorNet

./: .gitattributes  README.md  example.ipynb  memorytest.py  pyproject.toml  setup.cfg  setup.py
MotorNet/: tasks.py
docs/: .buildinfo  CNAME  genindex.html  index.html  make.bat  modules.html  motornet.effector.html  motornet.environment.html  motornet.html  motornet.muscle.html  motornet.skeleton.html  motornet_tf.html  motornet_tf.nets.callbacks.html  motornet_tf.nets.html  motornet_tf.nets.layers.html  motornet_tf.nets.losses.html  motornet_tf.nets.models.html  motornet_tf.plants.html  motornet_tf.plants.muscles.html  motornet_tf.plants.skeletons.html  motornet_tf.task.html  motornet_tf.utils.html  motornet_tf.utils.plotor.html  objects.inv  py-modindex.html  search.html  searchindex.js  tuto2.md  tutorials_tf.html
examples/: 0-muscle-demo.ipynb  1-build-effector.ipynb  1-build-plant.ipynb  2-build-net.ipynb  2-states.ipynb  3-environments.ipynb  3-states.ipynb  4-tasks.ipynb  4-train-net.ipynb  5-losses.ipynb  6-train-net.ipynb
motornet/: __init__.py  effector.py  environment.py  muscle.py  plotor.py  policy.py  skeleton.py  tasks.py
motornet_tf/: __init__.py  tasks.py
notebooks/: tutorial-point-mass-net.ipynb
source/: conf.py  motornet.effector.rst  motornet_tf.nets.callbacks.rst  motornet_tf.nets.losses.rst  motornet_tf.nets.models.rst  motornet_tf.nets.rst  motornet_tf.plants.muscles.rst  motornet_tf.plants.rst  motornet_tf.plants.skeletons.rst  motornet_tf.task.rst
tutorials/: 0-muscle-demo.ipynb  1-build-plant.ipynb  1b-build-plant.ipynb  2-build-net.ipynb  (+11 more)
(+214 files in other folders)
