[metadata]
name = motornet
version = attr: motornet.__version__
author = Olivier Codol
author_email = codol.olivier@gmail.com
description = A PyTorch-powered python toolbox to train deep neural networks to perform motor tasks.
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0 License
keywords = motornet, pytorch
url = https://oliviercodol.github.io/MotorNet/build/html/index.html
project_urls =
    Documentation = https://oliviercodol.github.io/MotorNet/build/html/index.html
    Github = https://github.com/OlivierCodol/MotorNet


[options]
packages = find:
